--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,33 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
 }
 
-.App-link {
-  color: #61dafb;
+
+/* playlist */
+
+.play-list {
+  width: 400px;
+  height: 70vh;
+  border-radius: 20px;
+  background-image: linear-gradient(rgb(21, 21, 83), rgb(11, 11, 42));
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+/* display */
+
+.display {
+  width: 400px;
+  height: 70vh;
+  border-radius: 20px;
+  background-image: linear-gradient(rgb(21, 21, 83), rgb(11, 11, 42));
+  margin: 2px;
 }
