--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@
   align-items: center;
   justify-content:space-around;
   flex-direction: column;
-  padding: 10px 0px
+  padding: 15px 0px
 }
 
 
@@ -30,5 +30,10 @@
   height: 90vh;
   border-radius: 20px;
   background-image: linear-gradient(rgb(21, 21, 83), rgb(11, 11, 42));
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
   margin: 2px;
+  padding-top: 15px;
 }
