--- a/src/components/screen/screen.css
+++ b/src/components/screen/screen.css
@@ -19,6 +19,17 @@
     width: 100%;
     height: 100%;
     object-fit: fill;
-    border-radius: 15px;
+    border-radius: 15px;  
+}
+
+.screen-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.screen-text-artist {
     
 }
