--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -8,6 +8,10 @@
     align-items: center;
 }
 
+.bg-active {
+    background-color: gray;
+}
+
 .cover-image {
     width: 55px;
     border-radius: 8px;
