--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -6,10 +6,11 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    transition: all 0.5s ease-in-out;
 }
 
 .bg-active {
-    background-color: gray;
+    background-color: rgb(56, 56, 202);
 }
 
 .cover-image {
