--- a/src/components/controlButtons/controlButtons.css
+++ b/src/components/controlButtons/controlButtons.css
@@ -6,10 +6,27 @@
   }
 
 .play-btn, .pause-btn {
-    font-size: 35px;
+    font-size: 38px;
     cursor: pointer;
 }
 
 .play-btn:active, .pause-btn:active {
     transform: translateY(2px);
+}
+
+.rewind {
+    font-size: 22px;
+    transform: rotateY(180deg);
+    margin-right: 22px;
+    cursor: pointer;
+}
+
+.forward {
+    font-size: 22px;
+    margin-left: 22px;
+    cursor: pointer;
+}
+
+.forward:active, .rewind:active {
+    opacity: 0.2;
 }
