--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-out;
 }
 
 .bg-active {
