--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -39,3 +39,13 @@
 .play:active {
     transform: translateY(2px);
 }
+
+@media screen and (max-width: 772px) {
+    .card {
+        width: 100%;
+        height: 68px;
+        border-radius: unset;
+        padding: 0px 15px;
+        margin-bottom: 3px;
+    }
+}
