--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -7,6 +7,7 @@
     justify-content: flex-start;
     align-items: center;
     transition: all 0.5s ease-out;
+    cursor:pointer;
 }
 
 .bg-active {
